--- a/blogspot.html
+++ b/blogspot.html
@@ -8,7 +8,12 @@
     <link rel="stylesheet" href="css/estilos.css"
 </head>
 <body>
-    <h1>Aqui vamos a hacer un blog spot</h1>
-    <p>Y este es el parrafo de inicio</p>
+    <div id="container">
+    <div id ='Post'>
+        <h1>Este es el titulo interesante del Post</h1>
+        <p>Y este es el parrafo de inicio donde vamos a explicar 
+            las cosas increibles que se pueden hacer con ramas
+        </p>
+    </div>
 </body>
 </html>
