--- a/blogspot.html
+++ b/blogspot.html
@@ -11,7 +11,7 @@
     <div id="container">
         <div id = "cabecera">
         HyperBlog
-        <span id="tagline"> Tu blog de confianza
+        <span id="tagline"> Tu blog de cabecera
         </span>
         </div>
     <div id ='Post'>
