--- a/blogspot.html
+++ b/blogspot.html
@@ -11,7 +11,7 @@
     <div id="container">
         <div id = "cabecera">
         HyperBlog
-        <span id="tagline"> Tu blog de confianza
+        <span id="tagline"> Tu blog maestro
         </span>
         </div>
     <div id ='Post'>
@@ -23,6 +23,7 @@
             Los blogs son la mejor forma de compartir informacion y tus ideas
             Mucho mas que ir a conferencias o salir en youtube. 
         </p>
+        <p>Suscribete y dale like</p>
     </div>
 </body>
 </html>
