--- a/blogspot.html
+++ b/blogspot.html
@@ -10,6 +10,7 @@
 <body>
     <div id="container">
         <div id = "cabecera">
+            <img id="logo" src="imagenes/LogoPlay.png"/>
         HyperBlog
         <span id="tagline"> Tu blog de cabecera
         </span>
