--- a/blogspot.html
+++ b/blogspot.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/estilos.css"
 </head>
 <body>
-    <div id="container">
+    <id id="container">
         <div id = "cabecera">
             <img id="logo" src="imagenes/LogoPlay.png"/>
         HyperBlog
@@ -26,5 +26,9 @@
         </p>
         <p>Suscribete y dale like</p>
     </div>
+    <div id="footer">
+        Hecho con amor en platzi
+    </div>
+    </id>
 </body>
 </html>
