Cambio de colores para prueba

--- a/blogspot.html
+++ b/blogspot.html
@@ -24,10 +24,11 @@
             Los blogs son la mejor forma de compartir informacion y tus ideas
             Mucho mas que ir a conferencias o salir en youtube. 
         </p>
+        <p>Pueden encontrarnos en todas nuestras redes sociales como Platzi</p>
         <p>Suscribete y dale like</p>
     </div>
     <div id="footer">
-        Hecho con amor en platzi
+        Hecho con amor para todos los estudiantes de platzi
     </div>
     </id>
 </body>
