--- a/blogspot.html
+++ b/blogspot.html
@@ -17,8 +17,8 @@
         </div>
     <div id ='Post'>
         <h1>Este es el titulo interesante del Post</h1>
-        <p>Y este es el parrafo de inicio donde vamos a explicar 
-            las cosas increibles que se pueden hacer con ramas
+        <p>Y este es el párrafo de inicio donde vamos a explicar 
+            las cosas increibles que se pueden hacer con la cración de ramas
         </p>
         <p>
             Los blogs son la mejor forma de compartir informacion y tus ideas
